--- a/index.html
+++ b/index.html
@@ -1,54 +1,121 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<!DOCTYPE plist PUBLIC '-//Apple//DTD PLIST 1.0//EN' 'http://www.apple.com/DTDs/PropertyList-1.0.dtd'>
-<plist version='1.0'>
-<dict>
-    <key>PayloadContent</key>
-    <array>
-        <dict>
-            <key>FullScreen</key>
-            <true/>
-            <key>Icon</key>
-            <data>كۆدی ڕه‌سمی ئەپەکە پێویستە بە کۆدیینگی بەیسی ٦٤ بێت 
-      </data>
-            <key>IsRemovable</key>
-            <true/>
-            <key>Label</key>
-            <string>Regay Islam‌</string>
-            <key>PayloadDescription</key>
-            <string>Configures Web Clip</string>
-            <key>PayloadDisplayName</key>
-            <string>Regay Islam</string>
-            <key>PayloadIdentifier</key>
-            <string>com.regayislam.ibrahim</string>
-            <key>PayloadOrganization</key>
-            <string>Regay Islam‌</string>
-            <key>PayloadType</key>
-            <string>com.apple.webClip.managed</string>
-            <key>PayloadUUID</key>
-            <string>B1766940-0927-4F94-BAF4-AFA8DC83B483</string>
-            <key>PayloadVersion</key>
-            <integer>1</integer>
-            <key>Precomposed</key>
-            <true/>
-            <key>URL</key>
-            <string>https://regayislam.tk</string>
-        </dict>
-    </array>
-    <key>PayloadDescription</key>
-    <string>دروستکردنی: ابراهیم قادر مصطفی‌</string>
-    <key>PayloadDisplayName</key>
-    <string>kurd store</string>
-    <key>PayloadIdentifier</key>
-    <string>com.regayislam.ibrahim</string>
-    <key>PayloadOrganization</key>
-    <string>Regay Islam</string>
-    <key>PayloadRemovalDisallowed</key>
-    <false/>
-    <key>PayloadType</key>
-    <string>Configuration</string>
-    <key>PayloadUUID</key>
-    <string>AC3450FC-4E16-46F2-A392-9D4D30CED9D5</string>
-    <key>PayloadVersion</key>
-    <integer>1</integer>
-</dict>
-</plist>
+
+<!DOCTYPE HTML>
+<html>
+
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/vaakash/socializer/80391a50/css/socializer.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<head>
+		<title>Regay Islam</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+
+
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+
+
+<style>
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding:auto;
+  float: center;
+  
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+}
+
+        .addb {
+            max-width: 50%;
+            margin-top: 30px;
+        }
+        .addb-droid {
+            max-width: 35%;
+        }
+
+
+</style>
+
+	</head>
+<center>
+	<body>
+
+		<Banner>
+			<section id="banner">
+				<h2><strong>Regay Islam </strong></h2>
+
+
+<br>
+
+				<p><img src="https://i.ibb.co/0CHytnZ/IMG-4266.png" width="200px"></p>
+<center>
+<br>
+<br>
+<br>
+<p>دابەزاندنی بەرنامەکە</p>
+
+<a href="https://is.gd/zZKSOQ"/a> <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Android_robot.png" width="60px" height="60px" /a><br>
+<a href="https://ivi.cx/i/cfg?5fb42b8a"/a> <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-1/24/logo_brand_brands_logos_apple_ios-512.png" width="60px" height="60px" /a>
+</center>
+        
+</div>		
+</div>		
+</div>		
+<div>		
+				<br>
+<br>
+<br>
+<br>
+<strong> ئەتوانن لە رێگای ئەم تۆرەکۆمەلایەتیانە لەگەلم بن </strong>
+<br>
+<br>
+<center>
+                            <a href="https://www.facebook.com/ibrahimmm55">
+                                <i class="fa fa-facebook-f"></i>
+                            </a>
+                            <a href="https://instagram.com/ittz._ibo">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                            <a href="https://is.gd/oOa7HO">
+                                <i class="fa fa-snapchat"></i>
+                            </a>
+                    
+                            <a href="https://www.youtube.com/channel/UC1dzAlpo1VKbcj8H3lI_8Sw">
+                                <i class="fa fa-youtube"></i>
+                            </a>
+                </div>
+
+				</div>
+
+					</header>
+
+
+
+<br>
+<br>
+
+		<Footer>
+			<footer id="footer">
+				<div class="copyright">
+					RegayIslam&copy;2020 </a>
+				</div>
+			</footer>
+</center>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	
+
+</body>
+</html>
