--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
 
 
 <style>
-
 a {
   text-decoration: none;
   display: inline-block;
-  padding:auto;
-  float: center;
-  
+  padding: 8px 16px;
+  text-align: center;
 }
 
 a:hover {
@@ -30,8 +28,19 @@ a:hover {
   color: black;
 }
 
+.previous {
+  background-color: #149C79;
+  color: white;
 }
 
+.next {
+  background-color: #1787AA;
+  color: white;
+}
+Footer{
+ text-align: center;
+
+}
         .addb {
             max-width: 50%;
             margin-top: 30px;
