--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Footer{
 <p>دابەزاندنی بەرنامەکە</p>
 
 <a href="https://is.gd/zZKSOQ"/a> <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Android_robot.png" width="60px" height="60px" /a><br>
-<a href="https://ivi.cx/i/cfg?5fb42b8a"/a> <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-1/24/logo_brand_brands_logos_apple_ios-512.png" width="60px" height="60px" /a>
+<a href="https://is.gd/9yDvAc"/a> <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-1/24/logo_brand_brands_logos_apple_ios-512.png" width="60px" height="60px" /a>
 </center>
         
 </div>		
