--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 <style>
+
 a {
   text-decoration: none;
   display: inline-block;
@@ -41,6 +42,9 @@ Footer{
  text-align: center;
 
 }
+
+}
+
         .addb {
             max-width: 50%;
             margin-top: 30px;
@@ -61,12 +65,12 @@ Footer{
 				<h2><strong>Regay Islam </strong></h2>
 
 
+<p>ئەم بەرنامەیە لە کۆمەلێک بەش پێکهاتووە کە تایبەتن بە ئاینی پیرۆزی ئیسلام ، دروستکردنی بەرنامەکە لەلایەن : ابراهیم قادر مصطفی </p>
 <br>
-
-				<p><img src="https://i.ibb.co/0CHytnZ/IMG-4266.png" width="200px"></p>
+				<p><img src="https://i.ibb.co/0CHytnZ/IMG-4266.png" width="180px"></p>
 <center>
-<br>
-<br>
+
+
 <br>
 <p>دابەزاندنی بەرنامەکە</p>
 
@@ -80,8 +84,7 @@ Footer{
 <div>		
 				<br>
 <br>
-<br>
-<br>
+
 <strong> ئەتوانن لە رێگای ئەم تۆرەکۆمەلایەتیانە لەگەلم بن </strong>
 <br>
 <br>
