--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Footer{
 <br>
 <p>دابەزاندنی بەرنامەکە</p>
 
-<a href="https://is.gd/zZKSOQ"/a> <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Android_robot.png" width="60px" height="60px" /a><br>
+<a href="https://is.gd/o358nL"/a> <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Android_robot.png" width="60px" height="60px" /a><br>
 <a href="https://is.gd/9yDvAc"/a> <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-1/24/logo_brand_brands_logos_apple_ios-512.png" width="60px" height="60px" /a>
 </center>
         
