--- a/aa.html
+++ b/aa.html
@@ -29,14 +29,13 @@
 <div class="container">
 	<div class="row lessons">
 		<div class="col-md-12 col-xs-12">
-			<h4 class="title-very-dark text-center">وانەکانی کوردی پۆلی یەکەمی بنەرەتی</h4>
+			<h4 class="text-center">وانەکانی کوردی پۆلی یەکەمی بنەرەتی</h4>
 			<div class="row lesson-head hidden-xs">
 				<div class="col-md-1 col-sm-1">
 					<div>زنجیرە</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
-					<div class="folder"> وانە <img src="img/folder.png"></div>
-				</div>
+					<div class="folder"> وانە </div>
 				<div class="col-md-1 col-sm-2">
 					<div class="exam">بینین</div>
 				</div>
@@ -48,16 +47,14 @@
 						1					</div>
 					<div class="col-md-4 col-sm-4">
 						<div class="dropdown">
-							<a class=" dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-play"></i> یەک بۆ یەک</a>
+							<a class=" dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"> یەک بۆ یەک</a>
 							<ul class="dropdown-menu">
-								<li><a href="#" class=" youtubeID" data-toggle="modal" data-target="#utModal" data-yt="7LkvuPBVpoI"><i class="fa fa-play"></i> نیشاندان لە سەر یوتیوب</a></li><li><a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="" target="_blank"><i class="fa fa-play"></i> نیشاندان لە سەر تیشک نێت (خۆڕاییە بۆ بەشداربووانی)</a></li>							</ul>
 						</div>
 					</div>
 					<div class="col-md-1 col-sm-2">
-													<a href="quiz.php?id=235" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
+													<a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
 											</div>
 					<div class="col-md-3 bp">
-													<a class="" href="viewpdf.php?src=myclass&amp;mode=lesson&amp;id=235"><i class="fa fa-file-pdf-o"></i> 1_yek_bo_yek.pdf</a>
 											</div>
 														</div>
 				<div class="lesson-row odd">
@@ -3341,7 +3338,7 @@
 													</div>
 					</div>
 														</div>
-						* بینینی کۆتایی بەش
+						* بینینیی کۆتایی بەش
 		</div>
 	</div>
 </div>
