--- a/aa.html
+++ b/aa.html
@@ -36,6 +36,7 @@
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="folder"> وانە </div>
+				</div>
 				<div class="col-md-1 col-sm-2">
 					<div class="exam">بینین</div>
 				</div>
@@ -52,7 +53,7 @@
 						</div>
 					</div>
 					<div class="col-md-1 col-sm-2">
-													<a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
+													<a href="qhttp://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
 											</div>
 					<div class="col-md-3 bp">
 											</div>
