--- a/aa.html
+++ b/aa.html
@@ -53,7 +53,7 @@
 						</div>
 					</div>
 					<div class="col-md-1 col-sm-2">
-													<a href="qhttp://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
+													<a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
 											</div>
 					<div class="col-md-3 bp">
 											</div>
@@ -71,9 +71,8 @@
 							<div>وانە</div>
 						</div>
 						<div class="col-xs-8">
-							<a class=" dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-play"></i> یەک بۆ یەک</a>
+							<a class=" dropdown-toggle" type="button" data-toggle="dropdown"> یەک بۆ یەک</a>
 							<ul class="dropdown-menu">
-								<li><a href="#" class=" youtubeID" data-toggle="modal" data-target="#utModal" data-yt="7LkvuPBVpoI"><i class="fa fa-play"></i> نیشاندان لە سەر یوتیوب</a></li><li><a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="" target="_blank"><i class="fa fa-play"></i> نیشاندان لە سەر تیشک نێت (خۆڕاییە بۆ بەشداربووانی)</a></li>							</ul>
 						</div>
 					</div>
 					<div class="row hidden-sm hidden-md hidden-lg">
@@ -81,12 +80,12 @@
 							<div>بینین</div>
 						</div>
 						<div class="col-xs-8">
-															<a href="quiz.php?id=235" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
+													<a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w1.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
 													</div>
 					</div>
 					<div class="row hidden-sm hidden-md hidden-lg">
 						<div class="col-xs-3">
-							<div>لاپەڕەکانی کتێب</div>
+							
 						</div>
 						<div class="col-xs-8">
 															<a class="" href="viewpdf.php?src=myclass&amp;mode=lesson&amp;id=235"><i class="fa fa-file-pdf-o"></i> 1_yek_bo_yek.pdf</a>
@@ -98,16 +97,14 @@
 						2					</div>
 					<div class="col-md-4 col-sm-4">
 						<div class="dropdown">
-							<a class=" dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-play"></i> پتر(زیاتر) ، کەمتر </a>
+							<a class=" dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"> پتر(زیاتر) ، کەمتر </a>
 							<ul class="dropdown-menu">
-								<li><a href="#" class=" youtubeID" data-toggle="modal" data-target="#utModal" data-yt="NOl9XkrBzrE"><i class="fa fa-play"></i> نیشاندان لە سەر یوتیوب</a></li><li><a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w2.mp4" class="" target="_blank"><i class="fa fa-play"></i> نیشاندان لە سەر تیشک نێت (خۆڕاییە بۆ بەشداربووانی)</a></li>							</ul>
 						</div>
 					</div>
 					<div class="col-md-1 col-sm-2">
-													<a href="quiz.php?id=206" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
+													<a href="http://hrf.tishknet.com/files/lessons/c3/m1_beshi1_w2.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
 											</div>
 					<div class="col-md-3 bp">
-													<a class="" href="viewpdf.php?src=myclass&amp;mode=lesson&amp;id=206"><i class="fa fa-file-pdf-o"></i> 2_ptr,kemtr.pdf</a>
 											</div>
 														</div>
 				<div class="lesson-row even">
