--- a/aa.html
+++ b/aa.html
@@ -6,12 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>هەورەفێرگە</title>
-	<meta name="description" content="هەورەفێرگە، پڕۆژەیەک بۆ کەسەکییاندنی پرۆسەی فێرکاری" />
-	<meta name="keywords" content="هەورەفێرگە، فێرگە، وانە، زانست" />
-	<meta name="type" content="website" />
-	<meta name="url" content="http://www.hrf.one" />
-
+	<title>خوێندنگا</title>
 	<!-- Bootstrap -->
 	<link href="aa.css" rel="stylesheet">
 	<link href="bb.css" rel="stylesheet">
