--- a/aa.html
+++ b/aa.html
@@ -517,16 +517,16 @@
 						11					</div>
 					<div class="col-md-4 col-sm-4">
 						<div class="dropdown">
-							<a class=" dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-play"></i> ژمارەکان لە ١٦ تا ٢٠</a>
+							<a class=" dropdown-toggle" type="button" data-toggle="dropdown"> ژمارەکان لە ١٦ تا ٢٠</a>
 							<ul class="dropdown-menu">
-								<li><a href="#" class=" youtubeID" data-toggle="modal" data-target="#utModal" data-yt="Bh3uvlcVpAE"><i class="fa fa-play"></i> نیشاندان لە سەر یوتیوب</a></li><li><a href="http://hrf.tishknet.com/files/lessons/c3/1m1_beshi3_w3.mp4" class="" target="_blank"><i class="fa fa-play"></i> نیشاندان لە سەر تیشک نێت (خۆڕاییە بۆ بەشداربووانی)</a></li>							</ul>
+
 						</div>
 					</div>
 					<div class="col-md-1 col-sm-2">
-													<a href="quiz.php?id=578" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
+													<a href="http://hrf.tishknet.com/files/lessons/c3/1m1_beshi3_w3.mp4" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
 											</div>
 					<div class="col-md-3 bp">
-													<a class="" href="viewpdf.php?src=myclass&amp;mode=lesson&amp;id=578"><i class="fa fa-file-pdf-o"></i> ..ekan_le_16_ta_20.pdf</a>
+
 											</div>
 														</div>
 				<div class="lesson-row odd">
@@ -535,16 +535,16 @@
 							<div>زنجیرە</div>
 						</div>
 						<div class="col-xs-9">
-							13						</div>
+							11						</div>
 					</div>
 					<div class="row hidden-sm hidden-md hidden-lg">
 						<div class="col-xs-3">
 							<div>وانە</div>
 						</div>
 						<div class="col-xs-8">
-							<a class=" dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-play"></i> ژمارەکان لە ١٦ تا ٢٠</a>
+							<a class=" dropdown-toggle" type="button" data-toggle="dropdown">ژمارەکان لە ١٦ تا ٢٠</a>
 							<ul class="dropdown-menu">
-								<li><a href="#" class=" youtubeID" data-toggle="modal" data-target="#utModal" data-yt="Bh3uvlcVpAE"><i class="fa fa-play"></i> نیشاندان لە سەر یوتیوب</a></li><li><a href="http://hrf.tishknet.com/files/lessons/c3/1m1_beshi3_w3.mp4" class="" target="_blank"><i class="fa fa-play"></i> نیشاندان لە سەر تیشک نێت (خۆڕاییە بۆ بەشداربووانی)</a></li>							</ul>
+
 						</div>
 					</div>
 					<div class="row hidden-sm hidden-md hidden-lg">
@@ -552,26 +552,26 @@
 							<div>بینین</div>
 						</div>
 						<div class="col-xs-8">
-															<a href="quiz.php?id=578" class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
+															<a href="http://hrf.tishknet.com/files/lessons/c3/1m1_beshi3_w3.mp4 class="btn btn-danger btn-quiz" style="min-width:87px">بینین</a>
 													</div>
 					</div>
 					<div class="row hidden-sm hidden-md hidden-lg">
 						<div class="col-xs-3">
-							<div>لاپەڕەکانی کتێب</div>
+
 						</div>
 						<div class="col-xs-8">
-															<a class="" href="viewpdf.php?src=myclass&amp;mode=lesson&amp;id=578"><i class="fa fa-file-pdf-o"></i> ..ekan_le_16_ta_20.pdf</a>
+
 													</div>
 					</div>
 														</div>
 							<div class="row lesson-row hidden-xs even ">
 					<div class="col-md-1 col-sm-1">
-						14					</div>
+						12					</div>
 					<div class="col-md-4 col-sm-4">
 						<div class="dropdown">
-							<a class=" dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-play"></i> ژمارەکان لە ٢١ تا ٢٥</a>
+							<a class=" dropdown-toggle" type="button" data-toggle="dropdown">ژمارەکان لە ٢١ تا ٢٥</a>
 							<ul class="dropdown-menu">
-								<a href="#" class="" data-toggle="modal" data-target="#vx650Modal"><i class="fa fa-play"></i> ژمارەکان لە ٢١ تا ٢٥</a>							</ul>
+								<a href="#" class="" data-toggle="modal" data-target="#vx650Modal">ژمارەکان لە ٢١ تا ٢٥</a>							</ul>
 						</div>
 					</div>
 					<div class="col-md-1 col-sm-2">
