--- a/index.html
+++ b/index.html
@@ -1,133 +1,208 @@
-
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/vaakash/socializer/80391a50/css/socializer.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-	<head>
-		<title>Regay Islam</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-
-
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-
-
-<style>
-
-a {
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-  text-align: center;
-}
-
-a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.previous {
-  background-color: #149C79;
-  color: white;
-}
-
-.next {
-  background-color: #1787AA;
-  color: white;
-}
-Footer{
- text-align: center;
-
-}
-
-}
-
-        .addb {
-            max-width: 50%;
-            margin-top: 30px;
-        }
-        .addb-droid {
-            max-width: 35%;
-        }
-
-
-</style>
-
-	</head>
-<center>
-	<body>
-
-		<Banner>
-			<section id="banner">
-				<h2><strong>Regay Islam </strong></h2>
-
-
-<p>ئەم بەرنامەیە لە کۆمەلێک بەش پێکهاتووە کە تایبەتن بە ئاینی پیرۆزی ئیسلام ، دروستکردنی بەرنامەکە لەلایەن : ابراهیم قادر مصطفی </p>
-<br>
-				<p><img src="https://i.ibb.co/0CHytnZ/IMG-4266.png" width="180px"></p>
-<center>
-
-
-<br>
-<p>دابەزاندنی بەرنامەکە</p>
-
-<a href="https://is.gd/o358nL"/a> <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Android_robot.png" width="60px" height="60px" /a><br>
-<a href="https://is.gd/9yDvAc"/a> <img src="https://cdn1.iconfinder.com/data/icons/logos-brands-1/24/logo_brand_brands_logos_apple_ios-512.png" width="60px" height="60px" /a>
-</center>
-        
-</div>		
-</div>		
-</div>		
-<div>		
-				<br>
-<br>
-
-<strong> ئەتوانن لە رێگای ئەم تۆرەکۆمەلایەتیانە لەگەلم بن </strong>
-<br>
-<br>
-<center>
-                            <a href="https://www.facebook.com/ibrahimmm55">
-                                <i class="fa fa-facebook-f"></i>
-                            </a>
-                            <a href="https://instagram.com/ittz._ibo">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                            <a href="https://is.gd/oOa7HO">
-                                <i class="fa fa-snapchat"></i>
-                            </a>
-                    
-                            <a href="https://www.youtube.com/channel/UC1dzAlpo1VKbcj8H3lI_8Sw">
-                                <i class="fa fa-youtube"></i>
-                            </a>
-                </div>
-
-				</div>
-
-					</header>
-
-
-
-<br>
-<br>
-
-		<Footer>
-			<footer id="footer">
-				<div class="copyright">
-					RegayIslam&copy;2020 </a>
-				</div>
-			</footer>
-</center>
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	
-
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
+<meta http-equiv="Cache-Control" content="no-cache"/>
+<meta http-equiv="pragma" content="no-cache"/>
+<meta http-equiv="x-dns-prefetch-control" content="on">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="revisit-after" content="7 days">
+<meta name="robots" content="noarchive">
+<meta name="googlebot" content="index, follow">
+<meta name="YandexBot" content="index, follow">
+<meta name="url" content="https://zefoy.com/">
+<meta name="Identifier-URL" content="https://www.google.com/">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="referrer" content="no-referrer">
+<meta name="google" content="notranslate">	
+<meta name="theme-color" content="#007bff">
+<meta name="google-site-verification" content="">
+<title>Zefoy</title>
+<meta name="description" content="Zefoy, you can get free hearts, fans, followers, likes, views, shares, comments without login.">
+<meta name="keywords" content="Zefoy, auto hearts, auto followers, auto fans, auto liker, auto views, auto shares, auto comments, auto likes, tools">
+<link rel="canonical" href="https://zefoy.com/">
+<link rel="dns-prefetch" href="//fonts.googleapis.com/">
+<link rel="dns-prefetch" href="//www.googletagmanager.com/">
+<link rel="dns-prefetch" href="//www.google-analytics.com/">
+<link rel="dns-prefetch" href="//stats.g.doubleclick.net/">
+<link rel="dns-prefetch" href="//adservice.google.com/">
+<link rel="dns-prefetch" href="//pagead2.googlesyndication.com/">
+<link rel="dns-prefetch" href="//tpc.googlesyndication.com/">
+<link rel="dns-prefetch" href="//googleads.g.doubleclick.net/">
+<link rel="dns-prefetch" href="//cdnjs.cloudflare.com/">
+<link rel="dns-prefetch" href="//ajax.googleapis.com/">
+<link rel="shortcut icon" href="https://zefoy.com/assets/favicon.ico" type="image/x-icon">
+<link rel="stylesheet" type="text/css" href="https://zefoy.com/assets/bootstrap.min.css?v=1606338125">
+<link rel="stylesheet" type="text/css" href="https://zefoy.com/assets/f49dae2c2269c486bb85979af55a7185.css?v=1606338125">
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+<script src="//stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</head>
+<body class="text-center arka-plan-color">
+<nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+<ul class="navbar-nav">
+<li class="nav-item">
+<a href="/" class="nav-link navbar-brand"><i class="fa fa-home"></i> Home</a>
+</li>
+</ul>
+<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#inavbar" aria-controls="inavbar" aria-expanded="false" aria-label=""><span class="navbar-toggler-icon"></span></button>
+<div class="navbar-collapse collapse flex-row-reverse" id="inavbar">
+<ul class="navbar-nav">
+<li class="nav-item">
+<a href="#" class="text-small nav-link px-1 navbar-brand" data-toggle="modal" data-target="#TermsModal">
+<i class="fa fa-flag"></i> Terms </a>
+</li>
+<li class="nav-item">
+<a href="#" class="text-small nav-link px-1 navbar-brand" data-toggle="modal" data-target="#PrivacyModal">
+<i class="fa fa-shield"></i> Privacy </a>
+</li>
+<li class="nav-item">
+<a href="#" class="text-small nav-link px-1 navbar-brand" data-toggle="modal" data-target="#ContactModal">
+<i class="fa fa-envelope"></i> Contact </a>
+</li>
+</ul>
+</div>
+</nav>
+<!---MODAL--->
+<div class="modal fade" id="TermsModal" tabindex="-1" role="dialog" aria-labelledby="TermsModalx1" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="TermsModalx1">Terms & Conditions</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+	 <div rel="noindex, nofollow, noarchive" class="modal-body">
+	By using our app you agreed with our terms and conditions.<br>
+	<b>Notice</b><br>
+	We are not responsible for any damage/claims in any case, use at your own risk.<br>
+	<b>Usage</b><br>
+	We use cookies for improve your experience.<br>
+	<b>Rights</b><br>
+	We have all the rights to change/modify our terms & conditons/privacy policy at any time.<br><br>
+	If you don't agree with our terms & conditions, you should stop using our services.<br><br>
+	This section is last updated on 15.07.2020.<br>
+	  </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!---MODAL--->
+<div class="modal fade" id="PrivacyModal" tabindex="-1" role="dialog" aria-labelledby="PrivacyModalx1" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="PrivacyModalx1">Privacy Policy</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+	  <div class="modal-body">
+	<b>Privacy Policy</b><br>
+	If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at contact.<br>
+	We consider the privacy of our visitors to be extremely important. This privacy policy document describes in detail the types of personal information is collected and recorded by our app and how we use it.<br>
+	<b>Log Files</b><br>
+	Like many other Web sites, our app makes use of log files. These files merely logs visitors to the site - usually a standard procedure for hosting companies and a part of hosting services's analytics.<br> The information inside the log files includes internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date/time stamp, referring/exit pages, and possibly the number of clicks.<br> This information is used to analyze trends, administer the site, track user's movement around the site, and gather demographic information. IP addresses, and other such information are not linked to any information that is personally identifiable.<br>
+	<b>Cookies and Web Beacons</b><br>
+	Our app uses cookies to store information about visitors' preferences, to record user-specific information on which pages the site visitor accesses or visits, and to personalize or customize our web page content based upon visitors' browser type or other information that the visitor sends via their browser.<br>
+	<b>DoubleClick DART Cookie</b><br>
+	Google, as a third party vendor, uses cookies to serve ads on our app.<br>
+	Google's use of the DART cookie enables it to serve ads to our site's visitors based upon their visit to our app and other sites on the Internet.<br>
+	Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy at the following URL - <a rel="noindex, nofollow, noarchive" style="text-decoration:none;" href="https://www.google.com/privacy_ads.html">https://www.google.com/privacy_ads.html</a><br>
+	<b>Our Advertising Partners</b><br>
+	Some of our advertising partners may use cookies and web beacons on our site. Our advertising partners include Google<br>
+	While each of these advertising partners has their own Privacy Policy for their site.<br>
+	You may consult this listing to find the privacy policy for each of the advertising partners of our app.<br>
+	These third-party ad servers or ad networks use technology in their respective advertisements and links that appear on our app and which are sent directly to your browser.<br> They automatically receive your IP address when this occurs. Other technologies (such as cookies, JavaScript, or Web Beacons) may also be used by our site's third-party ad networks to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on the site.<br>
+	Our app has no access to or control over these cookies that are used by third-party advertisers.<br>
+	<b>Third Party Privacy Policies</b><br>
+	You should consult the respective privacy policies of these third-party ad servers for more detailed information on their practices as well as for instructions about how to opt-out of certain practices.<br> Our app's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites.<br>
+	More detailed information about cookie management with specific web browsers can be found at the browsers' respective websites.<br>
+	<b>Online Privacy Policy Only</b><br>
+	This privacy policy applies only to our online activities and is valid for visitors to our website and regarding information shared and/or collected there.<br> This policy does not apply to any information collected offline or via channels other than this website.<br>
+	<b>Consent</b><br>
+	By using our website, you hereby consent to our privacy policy and agree to its terms.<br>
+	<b>Update</b><br>
+	This Privacy Policy was last updated on: 15.07.2020.<br>
+	Should we update, amend or make any changes to our privacy policy, those changes will be posted here.<br>
+	  </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="ContactModal" tabindex="-1" role="dialog" aria-labelledby="ContactModalx1" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ContactModalx1">Contact</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+		<div class="modal-body">
+		<b>sergey.plati <i class="fa fa-at"></i> pm.me</b><br>
+	  </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<noscript><style>.noscriptcheck{display:none;}.hgchd{display:none;}</style><div class="text-danger h4 text-center"><br><br>You need to enable Javascript.<br>If you do not use a Javascript-enabled browser, will not work it.</div></noscript>
+<div class="noscriptcheck">
+<!--<script async="async" data-cfasync="false" src="//upgulpinon.com/1?z=3987067"></script>-->
+<div class="captcha"></div>
+<div class="d-none" id="main">
+<form action="/" method="POST" onsubmit="loadlogin()">
+<div align="center">
+<div class="card mb-3"style="width: 18rem;">
+<img src="/a1ef290e2636bf553f39817628b6ca49.php?_CAPTCHA&amp;t=0.01454200+1617102460" class="img-thumbnail card-img-top" alt="CAPTCHA code">
+<div class="card-body p-1">
+<input class="form-control form-control-lg text-center rounded-0" type="text" maxlength="50" name="428d2c821361e2" oninput="this.value=this.value.toLowerCase()" placeholder="Enter the word" autocomplete="off" required="">
+<div class="mb-1 mt-2">
+<button type="submit" class="btn btn-primary btn-lg btn-block rounded-0 a218b4367b97e62d147"><i class="fa fa-check-square fa-lg"></i></button></div></div></div>
+<input type="hidden" name="r75619cf53f5a5d7aa6af82edfec3bf0">
+</div>
+</form>
+</div>
+</div>
+<div align="center" class="google_ads">
+</div> 
+<div style="margin-bottom:50px;"></div>
+<div id="loaderxlogin" style="display:none">
+<div style="width:100px;height:100px" class="spinner-border"></div></div>
+<div style="margin-top:50px;">
+<div class="row text-center container"> 
+<div class="col-sm-4 features"> 
+<p class="text-primary"><i class="fa fa-bolt fa-4x text-primary"></i></p>
+<h2>Extremely Superfast</h2> 
+<p>We've built it fully from scratch, hence using a lot of security and performance measures which makes it extremely superfast.</p></div>
+<div class="col-sm-4 features">
+<p class="text-primary"><i class="fa fa-shield fa-4x text-primary"></i></p>
+<h2>Safe & Secure</h2>
+<p>Our App is safe and secure and always will be. We are working to provide free services as clear as we can without wanting any login informations.</p> </div>
+<div class="col-sm-4 features">
+<p class="text-primary"><i class="fa fa-globe fa-4x text-primary"></i></p>
+<h2>Free For All</h2> 
+<p>Our social networking tools free for all. No matter from which city/country you are. You can use our social networking tools in free for lifetime.</p> 
+</div>
+<div class="col-sm"><hr><p class="text-center style-text-small">Zefoy &copy; 2021</p></div>
+<script type="text/javascript">
+</script>
+<script type="text/javascript" charset="utf-8" src="assets/ads.js?v=1606338125"></script>
+<script type="text/javascript" src="assets/c2adfdd3ec2370494471c635874e903e.js?v=1606338125"></script>
+<script type="text/javascript" src="assets/084adbdeab59f89e75747aab13bd9198.js?v=1606338125"></script>
+<script type="text/javascript" src="assets/cnld950a45d32222242cc709df013ebe.js?v=1606338125"></script><script type="text/javascript">'28ea86e60b'!=md5(btoa(navigator.userAgent)).substring(0,10)&&$("#main").html("<h2 class='text-danger font-weight-bold'>Please update your browser or try a different one.</h2>"),$("#main").removeClass("d-none");</script>
+<div id="loading" class="hgchd" style="background-color:rgba(0, 0, 0, 0.5);">
+<div class="spinner-border" style="width:100px;height:100px;"></div></div>
 </body>
 </html>
