--- a/About.html
+++ b/About.html
@@ -91,7 +91,7 @@ ul li:nth-child(5) a:hover .fab {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 10px;
   margin: 4px 2px;
   cursor: pointer;
   
@@ -107,16 +107,37 @@ p{
 	text-align: center;
 	font-size: 20px;
 }
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
  </style>
  
  <body>
  <br>
- <center>
- <iframe width='370' height='210' frameborder='0' scrolling='no' allowfullscreen src="http://qanat.tv/1"></iframe> 
- </center>
+<center>
+
+<div class="card">
+  <img src="https://i.ibb.co/mhpY6bn/origin-gallery-uid-FBE2002-D-D299-4826-8-B3-C-7-EACA22-C04-E5-1605378454339-source-other.jpg" alt="ibrahim" width="200" height="200">
+</div>
+
+</center>
+
  <br>
  <br>
  <br>
+<br>
+
+ <br>
+<br>
+
   <center>
 <a href="https://sulltan-store.blogspot.com/?m=1" class="button button1">گەرانەوە بۆ لیستی سەرەکی</a>
  </center>
