--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css'>
 <meta name="viewport" content="user-scalable=no; width=device-width; height=device-height; initial-scale=1.0;" />
-  <title>Sulltan TV</title>
+  <title>دەربارە</title>
  
  </head>
  
