--- a/About.html
+++ b/About.html
@@ -5,7 +5,18 @@
 
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+@font-face {
+  font-family: 'Speda-Bold';
+  src: url('Speda-Bold.woff' ) format('woff2');
+}
+
 <style>
+body{
+
+  font-family: 'Speda-Bold';
+
+}
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
