--- a/About.html
+++ b/About.html
@@ -20,7 +20,7 @@
   margin: auto;
   text-align: center;
   font-family: 'Speda-Bold';
-  background-color: red;
+  background-color: #EEEEEE;
 }
 
 .title {
