--- a/About.html
+++ b/About.html
@@ -18,8 +18,11 @@
   <img src="https://i.ibb.co/mhpY6bn/origin-gallery-uid-FBE2002-D-D299-4826-8-B3-C-7-EACA22-C04-E5-1605378454339-source-other.jpg" alt="John" style="width:100%">
   <h3>ابراھیم قادر مصطفی بالەکی </h3>
   <p class="title">دروستکەری بەرنامەکە</p>
-<div class="link" />
+
+<div class="Link">
+
     <a href="https://sulltan-store.blogspot.com/?m=1">گەرانەوە بۆ لیستی سەرەکی</a>
+</div>
   <h6>لەرێگای ئەم تۆرەکۆمەلایەتیانە لەگەلم بن</h6>
 
     <div style="margin: 24px 0;">
