--- a/About.html
+++ b/About.html
@@ -28,7 +28,7 @@
     <div style="margin: 24px 0;">
       <a href="https://twitter.com/ibrahemqadir1"><i class="fa fa-twitter"></i></a> 
 
-     <a href="https://t.me/sulltan_apk"><i class="fa fa-telegram"></i></a> 
+     <a href="https://t.me/sulltanstore"><i class="fa fa-telegram"></i></a> 
     <a href="https://is.gd/Czd7kK"><i class="fa fa-youtube"></i></a> 
     <a href="https://is.gd/oOa7HO"><i class="fa fa-snapchat"></i></a>  
     <a href="https://instagram.com/ittz._ibo"><i class="fa fa-instagram"></i></a>  
